force-app/main/default/objects/crms14__Company_Officers__c/crms14__Company_Officers__c.object-meta.xml
<CustomObject>
    <label>Company Officers</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Officers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>