force-app/main/default/objects/crms14__Company_Officers__c/fields/crms14__Anti_Money_Laundering_Supervisory_Bodies__c.field-meta.xml
<CustomField>
    <fullName>crms14__Anti_Money_Laundering_Supervisory_Bodies__c</fullName>
    <description>The Anti-Money Laundering supervisory bodies that the authorised corporate service provider was registered with when verifying the officer.</description>
    <inlineHelpText>The Anti-Money Laundering supervisory bodies that the authorised corporate service provider was registered with when verifying the officer.</inlineHelpText>
    <label>Anti Money Laundering Supervisory Bodies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>