force-app/main/default/objects/crms14__Company_Officers__c/fields/crms14__Appointment_Verification_Start_On__c.field-meta.xml
<CustomField>
    <fullName>crms14__Appointment_Verification_Start_On__c</fullName>
    <description>The date on which the identity verification statement was supplied for the appointment.</description>
    <inlineHelpText>The date on which the identity verification statement was supplied for the appointment.</inlineHelpText>
    <label>Appointment Verification Start On</label>
    <type>Date</type>
</CustomField>