force-app/main/default/objects/crms14__Company_Officers__c/fields/crms14__External_Id__c.field-meta.xml
<CustomField>
    <fullName>crms14__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>