force-app/main/default/objects/crms14__Company_Officers__c/fields/crms14__Officer__c.field-meta.xml
<CustomField>
    <fullName>crms14__Officer__c</fullName>
    <label>Officer</label>
    <referenceTo>crms14__Officer__c</referenceTo>
    <relationshipLabel>Company Officers</relationshipLabel>
    <relationshipName>Company_Officers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>