force-app/main/default/objects/crms14__Company_Officers__c/fields/crms14__Person_Number__c.field-meta.xml
<CustomField>
    <fullName>crms14__Person_Number__c</fullName>
    <label>Person Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>